init /client, react app

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.komodoproject
+.idea
+
+/public
 
 /log/!.gitkeep
-/public/!.gitkeep
 
 !Build/
 .last_cover_stats
@@ -38,4 +40,3 @@ inc/
 /MANIFEST.bak
 /pm_to_blib
 /*.zip
-
