--- a/.perltidyrc
+++ b/.perltidyrc
@@ -1,15 +1,14 @@
--l=78   # Max line width is 78 cols
+-pbp    # Start with Perl Best Practices
+-l=80   # Max line width is 78 cols
+-mbl=2  # No more than 2 blank lines
 -i=4    # Indent level is 4 cols
 -ci=4   # Continuation indent is 4 cols
 -st     # Output to STDOUT
 -se     # Errors to STDERR
 -vt=2   # Maximal vertical tightness
 -cti=0  # No extra indentation for closing brackets
--pt=1   # Medium parenthesis tightness
--bt=1   # Medium brace tightness
--sbt=1  # Medium square bracket tightness
--bbt=1  # Medium block brace tightness
--nsfs   # No space before semicolons
--nolq   # Don't outdent long quoted strings
--wbb="% + - * / x != == >= <= =~ !~ < > | & >= < = **= += *= &= <<= &&= -= /= |= >>= ||= .= %= ^= x="    
-        # Break before all operators
+-pt=2   # Maximal parenthesis tightness
+-bt=2   # Maximal brace tightness
+-sbt=2  # Maximal square bracket tightness
+-bbt=0  # Medium block brace tightness
+-isbc   # Don't indent comments without leading space
